<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddComputerActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        >
        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:onClick="goBack"
            android:text="@string/ic_back"
            android:textColor="@color/black"
            android:textSize="28dp" />
        <TextView
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lb_edit_computer"
            style="@style/titlebox"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:background="@color/greyLine"/>

    <TextView
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lb_computer_name"/>
    <EditText
        android:id="@+id/et_computer_name"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:background="@drawable/edit_my"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:text="" />

    <TextView
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lb_computer_host"/>
    <EditText
        android:id="@+id/et_computer_host"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:background="@drawable/edit_my"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:text="" />
    <TextView
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lb_computer_port"/>
    <EditText
        android:id="@+id/et_computer_port"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:background="@drawable/edit_my"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:text="" />
    <TextView
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lb_computer_password"/>
    <EditText
        android:id="@+id/et_computer_password"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:background="@drawable/edit_my"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:text=""/>
    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"

        android:layout_marginTop="150dp">

        <Button
            android:id="@+id/btn_save_computer"
            android:layout_width="230dp"
            android:layout_height="56dp"
            android:layout_margin="2dp"
            android:text="@string/btn_finished"
            android:background="@drawable/btn_my"
            />
    </LinearLayout>

</LinearLayout>