<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">
<!--    <Spinner-->
<!--        android:layout_marginLeft="30dp"-->
<!--        android:id="@+id/sp_cmd_type"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:entries="@array/commandType" />-->
    <EditText
        android:id="@+id/et_cmd_type"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:background="@drawable/edit_my"
        android:ems="10"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:hint="@string/et_cmd_type"
        android:paddingLeft="10dp"
        android:text=""/>
    <EditText
        android:id="@+id/et_command"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_width="260dp"
        android:layout_height="48dp"
        android:background="@drawable/edit_my"
        android:ems="10"
        android:imeOptions="actionDone"
        android:hint="@string/et_command"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:text=""/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/et_args"
            android:layout_marginLeft="30dp"
            android:layout_width="260dp"
            android:hint="@string/et_args"
            android:layout_height="48dp"
            android:background="@drawable/edit_my"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:text=""/>
        <Button
            android:id="@+id/btn_add_new_command"
            android:background="@drawable/btn_circle"
            android:layout_margin="15dp"
            android:textSize="20sp"
            android:text="@string/ic_new_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

</LinearLayout>
